--- a/views/partials/aside.html
+++ b/views/partials/aside.html
@@ -1,6 +1,6 @@
-{{ if  {navigation:links group="sidebar"}  != '' OR  {widgets:area slug="sidebar"}  != ''}}
+{{ if  {navigation:links group="sidebar"}  !== '' OR  {widgets:area slug="sidebar"}  !== ''}}
 <aside class="hide-for-print">
-	{{ if  {navigation:links group="sidebar"} != '' }}
+	{{ if  {navigation:links group="sidebar"} !== '' }}
 	<h3>Navigation&nbsp;</h3>
 	<ul class="side-nav">
 		{{ navigation:links group="sidebar" }}
